@@ -9,8 +9,9 @@
 * Simplified event-handling (using hover instead of mouseover und mouseout)
 * Added another "pretty" example
 * Added top and left options to specify tooltip offset
+* Reworked example page: New layout, code examples
 
 1.0
 ---
 
-* n/a
+* first release considered stable
